added controller snippet added show message and redirect to snippet organized bundle menu

--- a/info.plist
+++ b/info.plist
@@ -2,6 +2,99 @@
 <!DOCTYPE plist PUBLIC "-//Apple//DTD PLIST 1.0//EN" "http://www.apple.com/DTDs/PropertyList-1.0.dtd">
 <plist version="1.0">
 <dict>
+	<key>mainMenu</key>
+	<dict>
+		<key>items</key>
+		<array>
+			<string>5C957443-5C94-47BF-8052-B39EB4BEC8EF</string>
+			<string>A338BE84-11CA-402E-9CDE-27B8BA3BC5BF</string>
+			<string>313093C7-1C44-4B0C-BBB1-829097ADCCC9</string>
+			<string>09BA3AD2-49F0-4A30-802B-2BD7E27218F3</string>
+		</array>
+		<key>submenus</key>
+		<dict>
+			<key>04B0A7A5-BA57-4976-A49E-03E4FAE72F0A</key>
+			<dict>
+				<key>items</key>
+				<array>
+					<string>CD0E9CD4-83FF-4CA3-8894-634CDAD37F8D</string>
+					<string>AA683190-48C2-4DB1-918F-626883FBB674</string>
+					<string>D1D28ED2-BF0A-41B6-BCE7-1366EAB7CAB3</string>
+					<string>5BF2B5BD-C8E8-4D92-8722-6F47A3E99C88</string>
+					<string>FEC7A7FD-7988-4609-8AF4-1062D5F541FF</string>
+					<string>0997F4C3-9D07-4E82-AF4C-9415E9D30DCA</string>
+					<string>EA958385-EB69-4131-BD75-8A1C4210E50B</string>
+				</array>
+				<key>name</key>
+				<string>Validation</string>
+			</dict>
+			<key>09BA3AD2-49F0-4A30-802B-2BD7E27218F3</key>
+			<dict>
+				<key>items</key>
+				<array>
+					<string>C9FD4203-CBBA-4BF6-86A9-3886CA12DF6C</string>
+				</array>
+				<key>name</key>
+				<string>Support</string>
+			</dict>
+			<key>313093C7-1C44-4B0C-BBB1-829097ADCCC9</key>
+			<dict>
+				<key>items</key>
+				<array>
+					<string>085AA739-6BF3-429D-A955-B5C4CAB408EE</string>
+					<string>BEE40BDF-F58C-402E-A2BF-A92852E4D741</string>
+					<string>184A7ECE-3F04-47D3-B1FD-D1A680BF4C6B</string>
+				</array>
+				<key>name</key>
+				<string>Controllers</string>
+			</dict>
+			<key>5C957443-5C94-47BF-8052-B39EB4BEC8EF</key>
+			<dict>
+				<key>items</key>
+				<array>
+					<string>04B0A7A5-BA57-4976-A49E-03E4FAE72F0A</string>
+					<string>DAF6A7B7-FB10-492E-913F-B05795576A85</string>
+					<string>BC9006CA-DC82-430F-9D48-34ACC2C23448</string>
+					<string>E391B9F5-B345-4EE1-A0EF-1CFE90CF5C92</string>
+					<string>54AD781B-AB1A-4E90-B171-A683BF6E0D59</string>
+					<string>3F664680-78DF-40B4-B155-58EEAD764D5B</string>
+				</array>
+				<key>name</key>
+				<string>Models</string>
+			</dict>
+			<key>A338BE84-11CA-402E-9CDE-27B8BA3BC5BF</key>
+			<dict>
+				<key>items</key>
+				<array>
+					<string>B0C6EBC3-9FBD-4567-A465-3DB340F7C0F6</string>
+					<string>3FD6A9ED-0464-45BF-9A5B-0396ECD947C1</string>
+					<string>34A47BA8-5F5B-4E3F-9F8D-1BADF2809AF8</string>
+					<string>50B2B093-4D6F-463E-BBF5-EB8DD6ACB7A4</string>
+					<string>09D9603A-67E3-4252-8E80-7D6F819A5049</string>
+					<string>37084D2A-09A8-4409-B9C8-1CAF4718EEE6</string>
+				</array>
+				<key>name</key>
+				<string>Views</string>
+			</dict>
+			<key>DAF6A7B7-FB10-492E-913F-B05795576A85</key>
+			<dict>
+				<key>items</key>
+				<array>
+					<string>29850433-23BF-40A5-8C3C-69B2BE57E54C</string>
+					<string>4158005B-31DB-45EF-BBE5-000F93C01ECC</string>
+					<string>C48C1FA3-D000-4566-8A64-AA7754CABF8F</string>
+					<string>3F8EC393-D16C-4697-9472-136F65EA88C4</string>
+					<string>B9BD711E-BD1C-4708-81D3-337154C623F2</string>
+					<string>303900C3-EF19-43FB-9B1E-72CF4BE56B46</string>
+					<string>9B388110-3759-4D01-8BEF-EAC8863E1192</string>
+					<string>B2B7EA31-7AAB-41FD-9061-3DC04A50CF37</string>
+					<string>DAF4F0B7-9649-4846-91F7-14DF9959199A</string>
+				</array>
+				<key>name</key>
+				<string>Query</string>
+			</dict>
+		</dict>
+	</dict>
 	<key>name</key>
 	<string>Fishy Framework</string>
 	<key>uuid</key>
